fonts work - check yo selectors! blurry, known issue, https://github.com/Semantic-Org/Semantic-UI/issues/2007 not much action from devs. split components

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   color: white;
   text-align: center;
 }
-h1 {
+h1.ui.header {
   font-family: 'Audiowide', sans-serif;
 }
 
